Mejoras esteticas. Nuevas fotos y logotipos. Otros.

--- a/src/app/layouts/home/home.component.html
+++ b/src/app/layouts/home/home.component.html
@@ -7,7 +7,7 @@
     <ul>
       <li id="headerIconText">      
         <a id="normalScreenHeaderLogo" href="#">
-          <img src="../assets/img/GAMAHeaderLogo.png" alt="GAMA EVANGELISTIC ASSOCIATION" id="normalScreenLogoImg">
+          <img src="../assets/img/icon-6.png" alt="GAMA EVANGELISTIC ASSOCIATION" id="normalScreenLogoImg">
           <span id="normalScreenLogoText">GAMA EVANGELISTIC <br> ASSOCIATION</span>
         </a>
       </li>
@@ -35,7 +35,7 @@
 
       <div class="col" id="cellPhoneHeaderLogoTit">
         <a href="#" id="cellPhoneLogoHeader">
-          <img id="cellPhoneLogoImg" src="../assets/img/GAMAHeaderLogo.png" alt="GAMA EVANGELISTIC ASSOCIATION" >
+          <img id="cellPhoneLogoImg" src="../assets/img/icon-6.png" alt="GAMA EVANGELISTIC ASSOCIATION" >
           <span id="cellPhoneLogoText">GAMA <br> EVANGELISTIC <br> ASSOCIATION</span>
         </a>
       </div>
@@ -68,14 +68,18 @@
 
   <section id="identity">
     <div class="container-fluid">
-      <div class="row">
+
+      <div class="row mb-5">
+
         <div id="significadoGAMA" class="col-12 col-lg-6 pt-4 pb-4 align-self-center">
-          <h2>¿Qué significa <span class="text-primary">GAMA</span>?</h2>
-          <p><span class="text-primary">Global Awakening Movement Association</span> somos un grupo de personas que
-           compartimos una serie de inquietudes entorno al evangelio y la iglesia de Cristo. Creemos que Dios está 
-           despertando y comisionando a su Iglesia alrededor de toda la tierra para cumplir con su llamado y alcanzar el 
-           destino que Dios tiene para ella. 
-          </p>
+          <div class="col">
+            <p id="identityTitleFirstLine">¿Qué significa GAMA?</p>
+            <p><span class="highlightText">Global Awakening Movement Association</span> somos un grupo de personas que
+            compartimos una serie de inquietudes entorno al evangelio y la iglesia de Cristo. Creemos que Dios está 
+            despertando y comisionando a su Iglesia alrededor de toda la tierra para cumplir con su llamado y alcanzar el 
+            destino que Dios tiene para ella. 
+            </p>    
+          </div>
         </div>
          
         <!--========= NORMAL SCREEN IDENTITY ========= -->
@@ -87,25 +91,26 @@
         <div class="col-md-12 col-lg-6 pb-4 d-block d-md-none"> 
           <img id="cell-phone-team-logo-gama" class="" src="../assets/img/GAMABodyLogo.png" alt="Logotipo de GAMA">
         </div> 
+        
+        <div id="identitySpaceBeetweenLogoAndText" class="row"></div>
       
-      
-        <div class="col-12 col-lg-4 pt-4 pb-4">
+        <div id="identityVision" class="identityComponent col-12 col-lg-4">
           <h2 class="text-center">VISIÓN</h2>
-          <p class="text-center">Ser parte del <span class="text-primary">despertar</span> que Dios tiene para Su Iglesia.
+          <hr>
+          <p class="text-center">Ser parte del <span class="highlightText">despertar</span> que Dios tiene para Su Iglesia.
           </p>
-          <a class="btn btn-outline-light" href="https://es.wikipedia.org/wiki/Honolulu">Conoce más</a>
         </div>
-        <div class="col-12 col-lg-4 pt-4 pb-4">
+        <div class="identityComponent col-12 col-lg-4">
           <h2 class="text-center">MISION</h2>
-          <p class="text-center">A través de diferentes iniciativas de <span class="text-primary">evangelismo</span> y <span class="text-primary">misiones</span> queremos extender el despertar de la Iglesia de Cristo.
+          <hr>
+          <p class="text-center">A través de diferentes iniciativas de <span class="highlightText">evangelismo</span> y <span class="highlightText">misiones</span> queremos extender el despertar de la Iglesia de Cristo.
           </p>
-          <a class="btn btn-outline-light" href="https://es.wikipedia.org/wiki/Honolulu">Conoce más</a>
         </div>
-        <div class="col-12 col-lg-4 pt-4 pb-4">
+        <div id="identityValues" class="identityComponent col-12 col-lg-4">
           <h2 class="text-center">VALORES</h2>
-          <p class="text-center">Identificamos la Palabra de Dios plenamente en la <span class="text-primary">Biblia</span> y confiamos en el <span class="text-primary">Espíritu Santo</span> como nuestro guía.
+          <hr>
+          <p class="text-center">Identificamos la Palabra de Dios plenamente en la <span class="highlightText">Biblia</span> y confiamos en el <span class="highlightText">Espíritu Santo</span> como nuestro guía.
           </p>
-          <a class="btn btn-outline-light" href="https://es.wikipedia.org/wiki/Honolulu">Conoce más</a>
         </div>
       
       </div>
@@ -147,38 +152,41 @@
   <!--=============== SPEAKERS =============== -->
   <!--======================================== -->
 
-  <section id="speakers" class="mt-4 mb-2">
+  <section id="speakers" class="mt-4 mb-3">
     <div class="container">
+      <div id="speakersSpaceAtBeginning" class="row"></div>
+        <div class ="col text-center">
+            <p id="speakerTitleFirstLine">CONOCE A LOS</p> 
+            <br>
+            <p id="speakertitleSecondLine">MIEMBROS DEL EQUIPO</p>
+        </div>
       <div class="row">
-          <div class ="col text-center text-uppercase">
-            <small>Conoce al</small>
-            <h2>Equipo</h2>
-          </div>
-      </div>
-      <div class="row">
-        <div class="col-12 col-md-6 col-lg-4 mb-4 offset-lg-2">
+        <div id="speakersCol" class="col-md-0 col-lg-2"></div>
+        <div class="col-md-6 col-lg-4 mb-4">
             <div class="card">
-                <img src="../assets/img/Valerio Andras.png" class="card-img-top" alt="Foto de Sacha">
+                <img id="valerioPhoto" src="../assets/img/foto-valerio-3.jpg" alt="Foto de Valerio">
                 <div class="card-body">
-                  <div class="badges">
-                    <span class="badge badge-warning">Misiones</span>
-                    <span class="badge badge-success">Evangelismo</span>
+                  <div class="badges mb-3">
+                    <span class="custom-badge warning">Misiones</span>
+                    <span class="custom-badge success">Evangelismo</span>
                   </div>
-                  <h5 class="card-title">Valerio Andras</h5>
+                  <p class="card-body-title text-dark">Valerio Andras</p>
+                  <hr>
                   <p class="card-text">Misionero a tiempo completo, participa en programas de radio, evangelismo en universidades, tours misioneros por Europa así como viajes por todo el mundo equipando a las iglesias en evangelismo.</p>
                   
-               </div>
+                </div>
             </div>
         </div>
-        <div class="col-12 col-md-6 col-lg-4 mb-4">
+        <div class="col-md-6 col-lg-4 mb-4">
             <div class="card">
-                <img src="../assets/img/Guillermo.jpeg" class="card-img-top" alt="Foto de Leonidas">
+                <img src="../assets/img/foto-guillermo-2.jpg" alt="Foto de Guillermo">
                 <div class="card-body">
-                  <div class="badges">
-                    <span class="badge badge-info">Ingeniería</span>
-                    <span class="badge badge-success">Evangelismo</span>
+                  <div class="badges mb-3">
+                    <span class="custom-badge info">Ingeniería</span>
+                    <span class="custom-badge success">Evangelismo</span>
                   </div>
-                  <h5 class="card-title mb-0">Guillermo Baldán</h5>
+                  <p class="card-body-title text-dark">Guillermo Baldán</p>
+                  <hr>
                   <p class="card-text">Ingeniero de profesión, se encarga de dar apoyo a la obra misionera en todo tipo de tareas logísticas y técnicas además de participar activamente en campañas evangelísticas</p>
                   
                </div>
@@ -216,10 +224,11 @@
   <section id="uneteMisiones" class="pt-5 pb-5">
     <div class="container">
       <!-- <div class="row"> -->
-        <div class="col text-uppercase text-center">
-          <small>únete a las </small>
-          <h2>MISIONES</h2>
-        </div>
+          <div class="col">
+            <p id="uneteMisionesTitleFirstLine">ÚNETE A LAS </p>
+            <br>
+            <p id="uneteMisionesTitleSecondLine">MISIONES</p>
+          </div>
           <p>
           <!-- Ponte en contacto con nosotros si te atrae la idea de participar en <abbr data-toggle="tooltip" title="En colaboración con iglesias locales y JCUM">misiones</abbr>. -->
           Ponte en contacto con nosotros si te atrae la idea de participar en misiones, en colaboración con iglesias locales y JCUM.
@@ -286,7 +295,7 @@
       <br>
       <div class="row text-center pb-1">
         <div class="col-12 col-lg">
-          Copyright &copy; 2025 - GAMA
+          Copyright &copy; 2025 - GAMA - Global Awakening Movement Association
         </div> 
       </div>
     </div>
@@ -324,7 +333,7 @@
     
   <!-- Modal -->
   <!--<div class="modal fade" id="modaloración" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">-->
-    <div class="modal fade" id="modalseminario" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- <div class="modal fade" id="modalseminario" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -356,9 +365,9 @@
                   <input class="form-control" type="text" name="_replyto" size="56">
                 </label>
               </div>
-            
+             -->
               <!-- your other form fields go here -->
-              <div class="modal-footer">
+              <!-- <div class="modal-footer">
                 <button type="submit" class="btn btn-platzi">Send</button>
                 <button type="button" class="btn btn-cancelar" data-dismiss="modal">Cancelar</button>
               </div>
@@ -367,9 +376,9 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
-<div class="modal fade" id="modaloración" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- <div class="modal fade" id="modaloración" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -392,9 +401,10 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
-<div class="modal fade" id="modaltour" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+<!-- <div class="modal fade" id="modaltour" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -421,9 +431,10 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
-<div class="modal fade" id="modalcontacto" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+<!-- <div class="modal fade" id="modalcontacto" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -450,7 +461,9 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
+
+
 <!--</div> -->
  <!--
 <div class="modal-dialog modal-dialog-centered" role="document">
@@ -492,12 +505,12 @@
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
           <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-database.js"></script>
+<!-- <script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-database.js"></script> -->
 <!-- TODO: Add SDKs for Firebase products that you want to use
    https://firebase.google.com/docs/web/setup#config-web-app -->
 
-<script>
+<!-- <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
     apiKey: "AIzaSyCClADFQo4NVRIH3HwQIGd3Z0bQ7uJytUs",
@@ -511,9 +524,9 @@
 
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
-</script>
+</script> -->
 
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-<script src="js/index.js"></script>
+<script src="js/index.js"></script> -->
