--- a/src/app/layouts/unete-misiones/unete-misiones.component.html
+++ b/src/app/layouts/unete-misiones/unete-misiones.component.html
@@ -309,9 +309,11 @@
         </div> 
       </div>
       <br>
-      <!-- <div class="col-6"></div> -->
-      <!-- <div class="col-6"> -->
-        Copyright &copy; 2025 - GAMA
-      <!-- </div> -->
+      <br>
+      <div class="row text-center pb-1">
+        <div class="col-12 col-lg">
+          Copyright &copy; 2025 - GAMA - Global Awakening Movement Association
+        </div> 
+      </div>
     </div>
   </footer>
