--- a/src/app/layouts/home/home.component.html
+++ b/src/app/layouts/home/home.component.html
@@ -155,25 +155,24 @@
   <section id="speakers" class="mt-4 mb-3">
     <div class="container">
       <div id="speakersSpaceAtBeginning" class="row"></div>
-        <div class ="col text-center">
-            <p id="speakerTitleFirstLine">CONOCE A LOS</p> 
-            <br>
-            <p id="speakertitleSecondLine">MIEMBROS DEL EQUIPO</p>
-        </div>
-      <div class="row">
+      <div class ="col text-center">
+          <p id="speakerTitleFirstLine">CONOCE A LOS</p> 
+          <br>
+          <p id="speakertitleSecondLine">MIEMBROS DEL EQUIPO</p>
+      </div>
+      <div id="speakersCardRow" class="row">
         <div id="speakersCol" class="col-md-0 col-lg-2"></div>
         <div class="col-md-6 col-lg-4 mb-4">
             <div class="card">
-                <img id="valerioPhoto" src="../assets/img/foto-valerio-3.jpg" alt="Foto de Valerio">
+                <img id="valerioPhoto" src="../assets/img/foto-valerio-4.jpg" alt="Foto de Valerio">
                 <div class="card-body">
-                  <div class="badges mb-3">
+                  <div class="mb-3">
                     <span class="custom-badge warning">Misiones</span>
                     <span class="custom-badge success">Evangelismo</span>
                   </div>
                   <p class="card-body-title text-dark">Valerio Andras</p>
                   <hr>
                   <p class="card-text">Misionero a tiempo completo, participa en programas de radio, evangelismo en universidades, tours misioneros por Europa así como viajes por todo el mundo equipando a las iglesias en evangelismo.</p>
-                  
                 </div>
             </div>
         </div>
@@ -187,8 +186,7 @@
                   </div>
                   <p class="card-body-title text-dark">Guillermo Baldán</p>
                   <hr>
-                  <p class="card-text">Ingeniero de profesión, se encarga de dar apoyo a la obra misionera en todo tipo de tareas logísticas y técnicas además de participar activamente en campañas evangelísticas</p>
-                  
+                  <p id="guillermoCardText" class="card-text">Ingeniero de profesión, se encarga de dar apoyo a la obra misionera en todo tipo de tareas logísticas y técnicas además de participar activamente en campañas evangelísticas.</p>
                </div>
             </div>
         </div>
@@ -229,7 +227,7 @@
             <br>
             <p id="uneteMisionesTitleSecondLine">MISIONES</p>
           </div>
-          <p>
+          <p id="uneteMisionesDescParagraph">
           <!-- Ponte en contacto con nosotros si te atrae la idea de participar en <abbr data-toggle="tooltip" title="En colaboración con iglesias locales y JCUM">misiones</abbr>. -->
           Ponte en contacto con nosotros si te atrae la idea de participar en misiones, en colaboración con iglesias locales y JCUM.
           </p>
