--- a/src/app/layouts/home/home.component.scss
+++ b/src/app/layouts/home/home.component.scss
@@ -245,7 +245,7 @@
 
     #speakerTitleFirstLine {
       font-family: serif !important;
-      font-size: 1rem;
+      font-size: 1.1rem;
       color: #3f51b5;
       letter-spacing: 3px;
       margin: 0 auto;
@@ -255,7 +255,7 @@
 
     #speakertitleSecondLine {
       font-family: serif !important;
-      font-size: 2rem;
+      font-size: 2.1rem;
       color: var(--bs-dark-rgb);
       letter-spacing: 3px;
       margin: 0 auto;
@@ -263,44 +263,56 @@
       margin-bottom: 40px;
     } 
 
-    card {
+    #speakersCardRow {
 
-      height: 100%;
+      .card {
 
-      #valerioPhoto {
-        max-width: 354px;
-        max-height: 357px;
-        min-width: 354px;
-        min-height: 357px;
-      }
-      #guillermoPhoto {
-        max-width: 354px;
-        max-height: 357px;
-        min-width: 354px;
-        min-height: 357px;
-      }
+        width: 100%;
 
-      .custom-badge {
-        display: inline-block;
-        padding: 1px 5px;
-        font-size: 13px;
-        color: white;
-        border-radius: 4px;
-        text-align: center;
-        margin-right: 5px;
-        white-space: nowrap;
-      }
+        .card-body {
 
-      .card-body-title {
-        font-size: 18px;
-        margin-bottom: 6px;
-      }
+            .card-body-title {
+              font-size: 18px;
+              margin-bottom: 6px;
+            }
 
-      hr {
-        margin: 8px 0px 15px 0px;
-      }
+            .custom-badge {
+              display: inline-block;
+              padding: 1px 5px;
+              font-size: 13px;
+              color: white;
+              border-radius: 4px;
+              text-align: center;
+              margin-right: 5px;
+              white-space: nowrap;
+            }
 
-    } //end card
+            .warning {
+              background-color: #f0ad4e; /* Color similar a "badge-warning" */
+            }
+            
+            .success {
+              background-color: #5cb85c; /* Color similar a "badge-success" */
+            }
+
+            .info {
+              background-color: #5bc0de; /* Color similar a "badge-info" */
+            }
+
+            hr {
+              margin: 8px 0px 15px 0px;
+            }
+
+            #guillermoCardText {
+              padding-bottom: 20px;
+            }
+
+
+        } //end card-body
+
+      } //end card
+
+    }
 
   } //end speakers
 
@@ -310,28 +322,78 @@
       padding: 40px 0;
       background-color: #f9f9f9;
 
-      #uneteMisionesTitleFirstLine {
-        font-size: 1rem;
-        color: #3f51b5;
-        letter-spacing: 3px;
-        margin: 0 auto;
-        padding-bottom: 5px;
-        margin-bottom: 10px;
-      } 
-
-      #uneteMisionesTitleSecondLine {
-        font-size: 1.3rem;
-        color: #3f51b5;
-        letter-spacing: 3px;
-        margin: 0 auto;
-        padding-bottom: 5px;
-        margin-bottom: 10px;
-      } 
     
       .container {
+
         max-width: 800px;
         margin: 0 auto;
         padding: 0 20px;
+
+        #uneteMisionesTitleFirstLine {
+          font-family: serif !important;
+          font-size: 1.3rem;
+          color: #3f51b5;
+          letter-spacing: 4px;
+          margin: 0 auto;
+          padding-bottom: 0px;
+          margin-bottom: 0px;
+          text-align: center;
+        } 
+  
+        #uneteMisionesTitleSecondLine {
+          font-family: serif !important;
+          font-size: 2.9rem;
+          color:  var(--bs-dark-rgb);
+          letter-spacing: 6px;
+          margin: 0 auto;
+          padding-bottom: 5px;
+          margin-bottom: 40px;
+          text-align: center;
+        } 
+
+        #uneteMisionesDescParagraph {
+          text-align: center;
+          margin-bottom: 30px;
+        }
+
+      
+        form {
+  
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        
+            mat-form-field {
+              width: 100%;
+            }
+        
+            mat-checkbox {
+              // margin-bottom: 20px;
+        
+              a {
+                color: #3f51b5;
+                text-decoration: underline;
+                cursor: pointer;
+        
+                &:hover {
+                  color: #283593;
+                }
+              }
+            }
+        
+            button[mat-raised-button] {
+              margin-top: 20px;
+            }
+        
+            .mensaje-exito {
+              color: green;
+              text-align: center;
+              margin-top: 20px;
+              font-weight: bold;
+            }
+  
+        } //end form
+  
       }
     
       // h2 {
@@ -340,47 +402,7 @@
       //   margin-bottom: 20px;
       // }
     
-      p {
-        text-align: center;
-        margin-bottom: 30px;
-      }
-    
-      form {
-
-          display: flex;
-          flex-direction: column;
-          gap: 20px;
       
-          mat-form-field {
-            width: 100%;
-          }
-      
-          mat-checkbox {
-            // margin-bottom: 20px;
-      
-            a {
-              color: #3f51b5;
-              text-decoration: underline;
-              cursor: pointer;
-      
-              &:hover {
-                color: #283593;
-              }
-            }
-          }
-      
-          button[mat-raised-button] {
-            margin-top: 20px;
-          }
-      
-          .mensaje-exito {
-            color: green;
-            text-align: center;
-            margin-top: 20px;
-            font-weight: bold;
-          }
-
-      } //end form
 
     
   } //end uneteMisiones
